@@ -1,3 +1,4 @@
+* Allow to use tuple for Reference
 * Add constant interpolation on line graph
 * Add create/delete field access
 * Add dynamic size limit on the One2Many, Many2Many and Char
